rewrite builtin server configurable